Making navbar position sticky instead of fixed (does the same thing but doesn't bleed outside of div)

--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -219,11 +219,9 @@ footer {
   padding-bottom: 1px;
 }
 
-
-#sidebarcon {
-  /* position: fixed;
-  width: 15.8%; */
-
+.sidebar {
+  top: 0;
+  position: sticky;
 }
 
 .dropdown {
